updated index page to include search history example

--- a/views/index.pug
+++ b/views/index.pug
@@ -28,4 +28,12 @@ html
             hr
             h4 Returns
             hr
-            p(class="example-return") [{ <br><span class="key">"url"</span>: ""http://www.i-programmer.info/images/stories/News/2016/April/B/freecodecamp1.jpg"",<br> <span class="key">"snippet"</span>: "Note that Jquery comes before ...",<br> <span class="key">"thumbnail"</span>: "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSESe7xmBOcXwBoyG0FLY4VFOCZ31yzu1xg6K5nWUEliKZ6X8_z2YUbyXQ",<br> <span class="key">"context"</span>: "http://www.i-programmer.info/news/150-training-a-education/9698-freecodecamp-not-just-a-bootcamp.html"<br> },<br>...<br>]    
+            p(class="example-return") [{ <br><span class="key">"url"</span>: "http://www.i-programmer.info/images/stories/News/2016/April/B/freecodecamp1.jpg",<br> <span class="key">"snippet"</span>: "Note that Jquery comes before ...",<br> <span class="key">"thumbnail"</span>: "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSESe7xmBOcXwBoyG0FLY4VFOCZ31yzu1xg6K5nWUEliKZ6X8_z2YUbyXQ",<br> <span class="key">"context"</span>: "http://www.i-programmer.info/news/150-training-a-education/9698-freecodecamp-not-just-a-bootcamp.html"<br> },<br>...<br>]    
+            
+            h4 Search History
+            hr
+            a(class="example-link" href="https://spitting-image.herokuapp.com/api/latest/imagesearch/") https://spitting-image.herokuapp.com/api/latest/imagesearch/
+            hr
+            h4 Returns
+            hr
+            p(class="example-return") [{ <br><span class="key">"term"</span>: "freecodecamp",<br><span class="key">"when"</span>: "2017-01-01T01:56:29.991Z"<br> },<br>...<br>] 
