--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 15px;
   line-height: 1.9em;
+  -webkit-font-smoothing: antialiased;
 }
 a {
   color: #44d0ad;
