--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -14,6 +14,7 @@ body
     font-family main-font
     font-size 15px
     line-height 1.9em
+    -webkit-font-smoothing antialiased
 
 a
     color neon-blue
