--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 html
     head
-        title Shortcut URL Microservice
+        title Spitting Image - Image Search Abstraction Layer
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
         link(rel="stylesheet", href="../css/style.css")
         link(href="https://fonts.googleapis.com/css?family=Raleway", rel="stylesheet")
